@@ -166,7 +166,9 @@ class SCTestGUI(unittest.TestCase):
         self.app.show_available_packages(["i-dont-exit"])
         self._p()
         self.assertFalse(self.app.available_pane.app_details.screenshot.get_property("visible"))
-        self.assertFalse(self.app.available_pane.app_details.info_table.get_property("visible"))
+        self.assertFalse(self.app.available_pane.app_details.version_info.get_property("visible"))
+        self.assertFalse(self.app.available_pane.app_details.license_info.get_property("visible"))
+        self.assertFalse(self.app.available_pane.app_details.support_info.get_property("visible"))
         self.assertFalse(self.app.available_pane.app_details.desc_section.get_property("visible"))
 
     # helper stuff
